Melhorando o versionamento da API Restful
