# app/Http/Controllers/Api/UserController.php
@@ -21,30 +21,25 @@ class UserController extends Controller
 {
     /**
      * Função para listar todos usuários
-     * @OAS\SecurityScheme(
-     *      securityScheme="API Key Auth",
-     *      type="apiKey",
-     *      in="header",
-     *      name="Authorization",
+     * 
+     * @OA\SecurityScheme(
+     *     securityScheme="API Key Auth",
+     *     type="apiKey",
+     *     in="header",
+     *     name="Authorization",
      * ),
-     * @OA\Get (
+     * @OA\Get(
      *     path="/users",
      *     tags={"Users"},
-     *      @OA\RequestBody(
-     *         required=true,
-     *         description="Preencher com token fornecido no login",
-     *         @OA\JsonContent(
-     *             required={"token"},
-     *             @OA\Property(property="token", type="string", format="token", example="eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJodHRwOi8vMTI3LjAuMC4xOjgwMDAvYXBpL2xvZ2luIiwiaWF0IjoxNjgwMDU0MjgyLCJleHAiOjE2ODAwNTc4ODIsIm5iZiI6MTY4MDA1NDI4MiwianRpIjoiY0ZVaFpyamdiWWk0ZWhwdyIsInN1YiI6IjUiLCJwcnYiOiIyM2JkNWM4OTQ5ZjYwMGFkYjM5ZTcwMWM0MDA4NzJkYjdhNTk3NmY3In0.p9i2mhNNBUPkvbunTO83xUKzrcVBEtCt3jsMZvglyzY")
-     *         )
-     *     ),
+     *     summary="Listar todos os usuários",
+     *     description="Endpoint para listar todos os usuários",
      *     @OA\Response(
      *         response=200,
      *         description="Success",
      *         @OA\JsonContent(
      *             @OA\Property(
      *                 type="array",
-     *                 property="rows",
+     *                 property="items",
      *                 @OA\Items(
      *                     type="object",
      *                     @OA\Property(
@@ -67,17 +62,17 @@ class UserController extends Controller
      *                         type="timestamp",
      *                         example="2023-03-28T22:49:46.000000Z"
      *                     ),    
-     *                      @OA\Property(
+     *                     @OA\Property(
      *                         property="email_verified_at",
      *                         type="timestamp",
      *                         example="2023-03-28T22:49:46.000000Z"
      *                     ),
-     *                      @OA\Property(
+     *                     @OA\Property(
      *                         property="password",
      *                         type="string",
      *                         example="$2y$10$92IXUNpkjO0rOQ5byMi.Ye4oKoEa3Ro9llC/.og/at2.uheWG/igi"
      *                     ),
-     *                      @OA\Property(
+     *                     @OA\Property(
      *                         property="remember_token",
      *                         type="string",
      *                         example="8WgJPwXDSz"
@@ -90,31 +85,70 @@ class UserController extends Controller
      *                 )
      *             )
      *         )
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="No users found",
+     *         @OA\JsonContent(
+     *             @OA\Property(
+     *                 property="status",
+     *                 type="string",
+     *                 example="error"
+     *             ),
+     *             @OA\Property(
+     *                 property="message",
+     *                 type="string",
+     *                 example="No users found"
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Server error",
+     *         @OA\JsonContent(
+     *             @OA\Property(
+     *                 property="status",
+     *                 type="string",
+     *                 example="error"
+     *             ),
+     *             @OA\Property(
+     *                 property="message",
+     *                 type="string",
+     *                 example="Internal server error"
+     *             )
+     *         )
      *     )
      * )
      */
     public function index()
     {
-        $users = User::orderBy("name", 'ASC')->paginate(Constants::PAGE_NUMBER);
+        try {
+            $users              = User::orderBy("name", 'ASC')->paginate(Constants::PAGE_NUMBER);
 
-        if ($users->items() == []) {
+            if ($users->items() == []) {
+
+                return response()->json([
+                    "status"    => Constants::STATUS_ERROR,
+                    "message"   => Constants::ERROR_SEARCH,
+                    "page_1"    => $users->url(1),
+                ], 404);
+            }
 
             return response()->json([
+                "status"            => Constants::STATUS_SUCCESS,
+                "currentPage"       => $users->currentPage(),
+                "lastPage"          => $users->lastPage(),
+                "total"             => $users->total(),
+                "nextPage"          => $users->nextPageUrl(),
+                "previousPage"      => $users->previousPageUrl(),
+                "items"             => $users->items()
+            ], 200);
+        } catch (\Throwable $th) {
+            return response()->json([
                 "status"    => Constants::STATUS_ERROR,
-                "menssage"  => Constants::ERROR_SEARCH,
-                "page_1"    => $users->url(1),
-            ], 404);
+                "message"   => $th
+            ], 500);
         }
-
-        return response()->json([
-            "status"            => Constants::STATUS_SUCCESS,
-            "currentPage"       => $users->currentPage(),
-            "lastPage"          => $users->lastPage(),
-            "total"             => $users->total(),
-            "nextPage"          => $users->nextPageUrl(),
-            "previousPage"      => $users->previousPageUrl(),
-            "items"             => $users->items()
-        ], 200);
     }
 
     /**
@@ -162,7 +196,7 @@ class UserController extends Controller
             if (!$user = User::find($id)) {
                 return response()->json([
                     "status"    => Constants::STATUS_NOT_FOUND,
-                    "menssage"  => Constants::ERROR_SEARCH
+                    "message"   => Constants::ERROR_SEARCH
                 ], 404);
             }
 
@@ -173,7 +207,7 @@ class UserController extends Controller
         } catch (\Throwable $th) {
             return response()->json([
                 "status"    => Constants::STATUS_ERROR,
-                "menssage"  => $th
+                "message"   => $th
             ], 500);
         }
     }
